with real introduction

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Welcome to SinaWeibo homepages.
+<meta charset="UTF-8">
+<html>
+<head>
+<title> 新浪微博客户端（非官方）</title>
+</head>
+<body>
+<h1 align="center">新浪微博客户端（非官方）</h1>
+<hr /> 
+<p align="center">不需要安装</p>
+<p align="center">没有频频升级</p>
+<p align="center">没有弹出广告、侧边栏广告</p>
+<p align="center">不会留下冗余的注册表项和磁盘垃圾</p>
+<p align="center">这是一款精简的新浪微博桌面客户端</p>
+
+
+
+<br /><a href="resources/SinaWeibo.rar">点击下载客户端</a><br />
+<p>  该客户端程序预定以直接对可执行程序的下载或拷贝的形式进行发布，无需安装，并且在整个运行过程中也不会设置注册表项或在系统其它目录中生成文件。
+</p>
+
+<h2>软件运行截图</h2>
+<br />主界面<br />
+<img src="images/主界面.jpg" width="350" height="520" />
+<br /><br />关注的人<br />
+<img src="images/关注的人.jpg" width="354" height="433" />
+<br /><br />用户信息    定时提醒<br />
+<img src="images/用户信息.jpg" width="315" height="128" />
+<img src="images/定时提醒.jpg" width="352" height="91" />
+<br /><br />设置<br />
+<img src="images/设置.jpg" width="619" height="242" />
+
+<h2>作者：</h2>
+<address>
+  风行于世<br />
+  西安电子科技大学<br />
+  <a href="http://weibo.com/liuzhongshan">作者新浪微博</a><br />
+</address>
+</body>
+</html>
