--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <br /><br />设置<br />
 <img src="images/设置.jpg" width="619" height="242" />
 
-<h2>作者：</h2>
+<h2>作者信息：</h2>
 <address>
   风行于世<br />
   西安电子科技大学<br />
